services/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlapp
  labels:
    app: mlapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mlapp
  template:
    metadata:
      labels:
        app: mlapp
    spec:
      containers:
      - name: mlapp
        image: yaqianqi/mlapp
        ports:
          - containerPort: 5000
        resources:
          limits:
            cpu: 500m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 100Mi
