services/fallback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlapp-fallback
  labels:
    app: mlapp-fallback
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: mlapp-fallback
