services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlapp
  labels:
    app: mlapp
spec:
#  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: mlapp
