services/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/default-backend: mlapp-fallback
spec:
  rules:
    - host: mlapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlapp
                port:
                  number: 80
